# fsu-ml.github.io

./: 2024f.html  2025f.html  CNAME  OLD_README_f2024.md  README.md  README_f2024.md  README_s2023.md  README_s2024.md  index.html  my.md  topic_ideas.txt  trichotemy.html
materials/: notes_possible_topics_2024.txt  topics.txt
materials/jose_miranda/: 2024-10-11_KAN_presentation_MLGroup.pptx
materials/kunal_kanawade/: 2025-01-31_talk_resources.txt  word2vec.ipynb
materials/nathan_crock/: nb_for_seminar.ipynb
materials/nick_dexter/: plot_FNO_darcy_presentation.ipynb
materials/pankaj_chouhan_jose_miranda/: LangChain Cookbook Part 1 - Fundamentals.ipynb  Presentation_chouhan_pankaj.ipynb
materials/philippe_miron/20241101-rag/: README.md  ex_basic.ipynb  ex_llama_index.ipynb  pyproject.toml  vector_store.py
materials/philippe_miron/20241101-rag/documents/: alice.txt
materials/tyler_foster/: README.md
member_jpgs/: zina_ward.jpg.avif
tyler_foster/: Vector_Database.ipynb
